--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datastructures",
+  "name": "probablyshouldfigureout",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
 }
